# LongCareBot

./: .env.example  Dockerfile  README.md  docker-compose.yml  schema.sql
app/: __init__.py  agent.py  agent_service.py  db.py  main.py  notifications.py
backend/: .dockerignore  .env.example  API.md  README.md  pyproject.toml
backend/app/: agent_service.py  config.py  db.py  main.py
