[project]
name = "longcarebot"
version = "0.1.0"
description = "Long-care virtual companion backend"
requires-python = ">=3.11"
dependencies = [
  "openai-agents>=0.1.0",
  "asyncpg>=0.29.0",
  "fastapi>=0.115.0",
  "httpx>=0.28.0",
  "pydantic-settings>=2.6.0",
  "uvicorn[standard]>=0.32.0",
]

[dependency-groups]
dev = ["pytest>=8.3.0", "pytest-asyncio>=0.24.0", "ruff>=0.8.0"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
